--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,21 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/client/node_modules
+/server/node_modules
 /.pnp
 .pnp.js
 
 # testing
-/coverage
+/client/coverage
 
 # next.js
-/.next/
-/out/
+/client/.next/
+/client/out/
 
 # production
-/build
+/client/build
+*.key
 
 # misc
 .DS_Store
@@ -33,3 +35,4 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+/server/dist
