--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "graphql": "^16.4.0",
+    "jotai": "^1.6.5",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "18.0.0",
     "urql": "^2.2.0"
   },
