--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "author": "sixtenl",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.27",
+    "@types/redis": "^4.0.11",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
@@ -24,9 +26,11 @@
   "dependencies": {
     "apollo-server-express": "^3.6.7",
     "argon2": "^0.28.5",
+    "connect-redis": "^6.1.3",
     "express": "^4.18.0",
     "express-session": "^1.17.2",
     "graphql": "^15.8.0",
+    "ioredis": "^4.28.5",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
