--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "graphql": "^16.4.0",
     "jotai": "^1.6.5",
     "next": "12.1.5",
@@ -18,6 +20,10 @@
     "urql": "^2.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.11",
+    "@graphql-codegen/typescript-operations": "2.4.0",
+    "@graphql-codegen/typescript-urql": "^3.5.10",
     "@types/node": "17.0.27",
     "@types/react": "18.0.7",
     "@types/react-dom": "18.0.0",
