--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@urql/exchange-graphcache": "^4.4.0",
     "formik": "^2.2.9",
     "graphql": "^16.4.0",
     "jotai": "^1.6.5",
