--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@urql/exchange-graphcache": "^4.4.0",
     "formik": "^2.2.9",
     "graphql": "^16.4.0",
+    "isomorphic-unfetch": "^3.1.0",
     "jotai": "^1.6.5",
     "next": "12.1.5",
+    "next-urql": "^3.3.2",
     "react": "18.0.0",
     "react-dnd": "^16.0.1",
     "react-dom": "18.0.0",
+    "react-is": "^18.1.0",
     "urql": "^2.2.0"
   },
   "devDependencies": {
