--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "argon2": "^0.28.5",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.0",
     "express-session": "^1.17.2",
     "graphql": "^15.8.0",
