Stripe implementation progress

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.29.0",
     "@urql/exchange-graphcache": "^4.4.0",
     "formik": "^2.2.9",
     "isomorphic-unfetch": "^3.1.0",
