--- a/client/package.json
+++ b/client/package.json
@@ -1,43 +1,33 @@
 {
-  "name": "fullstack-shopping-app",
-  "version": "1.0.0",
+  "name": "nextjs-commerce-app",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "gen": "graphql-codegen --config codegen.yml"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@stripe/stripe-js": "^1.29.0",
-    "@urql/exchange-graphcache": "^4.4.0",
-    "formik": "^2.2.9",
-    "isomorphic-unfetch": "^3.1.0",
-    "jotai": "^1.6.5",
-    "next": "^12.1.5",
-    "next-urql": "^3.3.2",
-    "react": "18.0.0",
-    "react-dnd": "^16.0.1",
-    "react-dom": "18.0.0",
-    "react-is": "^18.1.0",
-    "stripe": "^9.2.0",
-    "urql": "^2.2.0"
+    "@headlessui/react": "^1.6.2",
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "lodash": "^4.17.21",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "stripe": "^9.4.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.6.2",
-    "@graphql-codegen/typescript": "2.4.11",
-    "@graphql-codegen/typescript-operations": "2.4.0",
-    "@graphql-codegen/typescript-urql": "^3.5.10",
-    "@types/node": "17.0.27",
-    "@types/react": "18.0.7",
-    "@types/react-dom": "18.0.0",
-    "autoprefixer": "^10.4.6",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "graphql": "^15.0.0",
-    "postcss": "^8.4.13",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "17.0.35",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.6.3"
+    "typescript": "4.7.2"
   }
 }
