--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,19 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/client/node_modules
-/server/node_modules
+node_modules
 /.pnp
 .pnp.js
 
 # testing
-/client/coverage
+coverage
 
 # next.js
-/client/.next/
-/client/out/
+.next/
+out/
 
 # production
-/client/build
+build
 *.key
 
 # misc
@@ -36,4 +35,3 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-/server/dist
