--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "stripe": "^9.4.0",
-    "swr": "^1.3.0"
+    "stripe": "^9.4.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
