--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@headlessui/react": "^1.6.2",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
-    "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "stripe": "^9.4.0"
+    "stripe": "^9.4.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
